build/kubernetes/_base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${RESOURCE_PREFIX}api-deployment
  namespace: ${NAMESPACE}
  labels:
    app: ${RESOURCE_PREFIX}api
    environment: ${ENVIRONMENT}
spec:
  replicas: ${API_REPLICAS}
  selector:
    matchLabels:
      app: ${RESOURCE_PREFIX}api
  template:
    metadata:
      labels:
        app: ${RESOURCE_PREFIX}api
        environment: ${ENVIRONMENT}
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: ${RESOURCE_PREFIX}api
          image: ${IMAGE_REPO}:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
          resources:
            requests:
              cpu: "${API_CPU_REQUEST}"
              memory: "${API_MEM_REQUEST}"
            limits:
              cpu: "${API_CPU_LIMIT}"
              memory: "${API_MEM_LIMIT}"
      imagePullSecrets:
        - name: ghcr-auth
